@startuml

title __HTTP's Class Diagram__\n

  namespace org.factcast.store.pgsql {
    namespace registry {
      namespace http {
        class org.factcast.store.pgsql.registry.http.HttpIndexFetcher {
            - client : OkHttpClient
            - etag : String
            {static} - log : Logger
            - schemaRegistryUrl : URL
            - since : String
            + HttpIndexFetcher()
            + fetchIndex()
            # HttpIndexFetcher()
            - createIndexUrl()
        }
      }
    }
  }
  

  namespace org.factcast.store.pgsql {
    namespace registry {
      namespace http {
        class org.factcast.store.pgsql.registry.http.HttpRegistryFileFetcher {
            - baseUrl : URL
            - client : OkHttpClient
            {static} - log : Logger
            + HttpRegistryFileFetcher()
            + fetchSchema()
            + fetchTransformation()
            ~ HttpRegistryFileFetcher()
            - fetch()
        }
      }
    }
  }
  

  namespace org.factcast.store.pgsql {
    namespace registry {
      namespace http {
        class org.factcast.store.pgsql.registry.http.HttpSchemaRegistry {
            {static} - log : Logger
            + HttpSchemaRegistry()
            # HttpSchemaRegistry()
        }
      }
    }
  }
  

  namespace org.factcast.store.pgsql {
    namespace registry {
      namespace http {
        class org.factcast.store.pgsql.registry.http.ValidationConstants {
            {static} + HTTPHEADER_E_TAG : String
            {static} + HTTPHEADER_IF_MODIFIED_SINCE : String
            {static} + HTTPHEADER_LAST_MODIFIED : String
            {static} + HTTP_NOT_MODIFIED : int
            {static} + HTTP_OK : int
            {static} + JACKSON : ObjectMapper
            {static} + JSON_SCHEMA_FACTORY : JsonSchemaFactory
            {static} + OK_HTTP : OkHttpClient
        }
      }
    }
  }
  

  org.factcast.store.pgsql.registry.http.HttpIndexFetcher .up.|> org.factcast.store.pgsql.registry.IndexFetcher
  org.factcast.store.pgsql.registry.http.HttpIndexFetcher o-- org.factcast.store.pgsql.registry.metrics.RegistryMetrics : registryMetrics
  org.factcast.store.pgsql.registry.http.HttpRegistryFileFetcher .up.|> org.factcast.store.pgsql.registry.RegistryFileFetcher
  org.factcast.store.pgsql.registry.http.HttpRegistryFileFetcher o-- org.factcast.store.pgsql.registry.metrics.RegistryMetrics : registryMetrics
  org.factcast.store.pgsql.registry.http.HttpSchemaRegistry -up-|> org.factcast.store.pgsql.registry.AbstractSchemaRegistry


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
